# pyepri

./: CHANGELOG.md  CODEOWNERS  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_new_features.yml  03_question.yml  config.yml
.github/workflows/: pyepri-ci.yml
.github/workflows/ISSUE_TEMPLATE/: config.yml
datasets/: __init__.py  bacteria-inkjet-20100709-B.npy  bacteria-inkjet-20100709-fgrad.npy  bacteria-inkjet-20100709-h.npy  bacteria-inkjet-20100709-h.pkl  bacteria-inkjet-20100709-proj.npy  bacteria-inkjet-20100709-proj.pkl  beads-phantom-20080313-B.npy  beads-phantom-20080313-fgrad.npy  beads-phantom-20080313-h.npy  beads-phantom-20080313-h.pkl  beads-phantom-20080313-proj.npy  beads-phantom-20080313-proj.pkl  beads-thintubes-20081017-B.npy  beads-thintubes-20081017-fgrad.npy  beads-thintubes-20081017-h.npy  beads-thintubes-20081017-h.pkl  beads-thintubes-20081017-proj.npy  beads-thintubes-20081017-proj.pkl  cnrs-inkjet-20110614-B.npy  cnrs-inkjet-20110614-fgrad.npy  cnrs-inkjet-20110614-h.npy  cnrs-inkjet-20110614-h.pkl  cnrs-inkjet-20110614-proj.pkl  dpph-logo-20080402-B.npy  dpph-logo-20080402-fgrad.npy  dpph-logo-20080402-h.npy  dpph-logo-20080402-h.pkl  dpph-logo-20080402-proj.npy  dpph-logo-20080402-proj.pkl  fusillo-20091002-B.npy  fusillo-20091002-B.txt  fusillo-20091002-fgrad.npy  fusillo-20091002-fgrad.txt  fusillo-20091002-h.DSC  fusillo-20091002-h.DTA  fusillo-20091002-h.mat  fusillo-20091002-h.npy  fusillo-20091002-h.pkl  fusillo-20091002-h.txt  (+54 more)
docs/: acknowledgments.md  conf.py  definitions.rst  index.md  installation.md  installation.rst  processing.rst  references.bib  references.rst
docs/_static/: custom.css  pyepri_installation_windows.webm
examples/core/: README.rst  tutorial_core_02_backprojection.py  tutorial_core_03_toeplitz.py
examples/filtered_back_projection/: README.rst
examples/filtered_back_projection/2d/: README.rst  example_fbp_2d_bacteria_inkjet.py  example_fbp_2d_beads_phantom.py  example_fbp_2d_beads_thintubes.py  example_fbp_2d_cnrs_inkjet.py  example_fbp_2d_dpph_logo.py  example_fbp_2d_phalanx.py  example_fbp_2d_scd_inkjet.py
examples/filtered_back_projection/3d/: README.rst  example_fbp_3d_fusillo.py  example_fbp_3d_tamtubes.py
examples/getting_started/: README.rst  tutorial_basics_01_check_install.py  tutorial_basics_02_data_loading.py  tutorial_basics_03_changing_backend.py  tutorial_basics_04_saving_results.py  tutorial_basics_05_datasets.py  tutorial_basics_06_display.py
examples/getting_started/basics/: README.rst  tutorial_basics_01_backends.py  tutorial_basics_02_bes3t_reader.py  tutorial_basics_03_datasets.py
examples/getting_started/core/: tutorial_core_01_projection.py  tutorial_core_02_backprojection.py  tutorial_core_03_toeplitz.py
examples/plug_and_play_regularization/: README.rst  example_01.py
examples/sources_separation/: README.rst  example_tv_multisrc_syntetic_shapes_2d.py  example_tv_multisrc_tam_and_tempo_tubes_2d.py  example_tv_multisrc_tam_and_tempo_tubes_3d.py  example_tv_multisrc_tam_insert_in_tempo_3d.py
examples/tv_regularization/: README.rst
src/pyepri/: __init__.py  apodization.py  backends.py  checks.py  displayers.py  io.py  monosrc.py  multisrc.py  optimization.py  processing.py  spectralspatial.py  utils.py
tests/: conftest.py  test_2d_monosrc.py  test_2d_multisrc.py  test_3d_monosrc.py  test_3d_multisrc.py  test_4d_spectralspatial.py  test_grad_and_div.py
(+11 files in other folders)
