[project]
name = "pyepri"
version = "1.1.1"
description = "A CPU & GPU compatible Python package for Electron Paramagnetic Resonance Imaging"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
  {name="Rémy Abergel", email="Remy.Abergel@math.cnrs.fr"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.2.4",
    "scipy",
    "matplotlib",
    "pyvista>=0.44.0",
    "finufft>=2.4.0",
    "jupyter",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/remy-abergel/pyepri"
Issues = "https://github.com/remy-abergel/pyepri/issues"

[build-system]
requires = [
	 "setuptools>=77", # remove deprecated license classifiers 
	 "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cupy-cuda12x = [
    "cupy-cuda12x",
#    "cutensor",
    "cufinufft>=2.4.0",
]
cupy-cuda11x = [
    "cupy-cuda11x",
#    "cutensor",
    "cufinufft",
]
torch-cpu = [
    "torch>=2.5.1",
    "torchinterp1d",
]
torch-cuda = [
    "torch>=2.5.1",
    "torchinterp1d",
    "cufinufft>=2.4.0",
]
dev = [
    "pytest",
    "pytest-cov",
]
doc = [
    "myst_parser",
    "sphinx-rtd-theme >= 0.4.2",
    "sphinx-autoapi",
#    "myst_nb",
#    "memory_profiler",
    "sphinx-gallery",
    "sphinx-tabs",
    "sphinx-design",
    "pyvista[all,trame]",
    "memory_profiler",
    "ipywidgets",
    "ipyvtklink",
    "sphinxcontrib-bibtex", 
    "sphinxcontrib-video",
]

# rocm support not seriously tested
cupy-rocm-5-0 = [
    "cupy-rocm-5-0",
#    "cutensor",
    "cufinufft",
]
cupy-rocm-4-3 = [
    "cupy-rocm-4-3",
    "cutensor",
    "cufinufft",
]
